--- a/public/assets/config.yml
+++ b/public/assets/config.yml
@@ -10,12 +10,10 @@ stylesheet:
 colors:
   dark:
     highlight-primary: "#00ff9c"
-    highlight-secondary: "#00bcd4"
-    highlight-hover: "#00e676"
-    background: "#0d1117"
-    card-background: "#161b22"
+    highlight-secondary: "#22d3ee"
+    background: "#0b0f14"
+    card-background: "#11161d"
     text: "#e6edf3"
-
 
 services:
 
