Update dark theme colors in config.ymlth8eme

--- a/public/assets/config.yml
+++ b/public/assets/config.yml
@@ -11,9 +11,10 @@ colors:
   dark:
     highlight-primary: "#00ff9c"
     highlight-secondary: "#22d3ee"
-    background: "#0b0f14"
-    card-background: "#11161d"
-    text: "#e6edf3"
+    background: "#05080f"
+    card-background: "#141928"
+    text: "#e5e7eb"
+
 
 services:
 
