--- a/public/assets/config.yml
+++ b/public/assets/config.yml
@@ -4,11 +4,15 @@
 
 title: "Welcome, Sujan Sanjeev"
 subtitle: "cd ~/Dashboard"
-logo: "logo.png"
-# icon: "fas fa-skull-crossbones" # Optional icon
+logo: "assets/tools/cat.gif"
+# icon: "fas fa-terminal" # Optional icon
 
 header: true
-footer: false
+footer: '<p class="footer-text">Press <kbd>/</kbd> to search • Built with ❤️ using Homer</p>'
+
+# Custom stylesheet
+stylesheet:
+  - "assets/custom.css"
 
 # Optional theme customization
 theme: default
@@ -43,7 +47,7 @@ colors:
 # Optional navbar
 links:
   - name: "Portfolio"
-    icon: "fas fa-user"
+    icon: "fas fa-globe"
     url: "https://sujanbrowser.netlify.app/"
     target: "_blank"
   - name: "GitHub"
@@ -55,57 +59,63 @@ links:
 # First level array represent a group.
 # Leave only a "items" key if not using group (group name, icon & tagstyle are optional, section separation will not be displayed).
 services:
-  - name: "Work"
+  - name: "work"
     icon: "fas fa-briefcase"
     items:
       - name: "Gmail"
-        logo: "https://www.google.com/gmail/about/static-2.0/images/logo-gmail.png"
-        subtitle: "Email"
+        logo: "assets/tools/gmail.svg"
+        subtitle: "Personal & Work Email"
         tag: "mail"
-        keywords: "email mail"
+        tagstyle: "is-info"
+        keywords: "email mail google"
         url: "https://gmail.com"
         target: "_blank"
         
       - name: "Outlook"
-        logo: "https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Microsoft_Office_Outlook_%282018%E2%80%93present%29.svg/512px-Microsoft_Office_Outlook_%282018%E2%80%93present%29.svg.png"
-        subtitle: "Office Mail"
+        logo: "assets/tools/outlook.svg"
+        subtitle: "Microsoft 365"
         tag: "mail"
-        keywords: "email office"
+        tagstyle: "is-info"
+        keywords: "email office microsoft"
         url: "https://outlook.office.com"
         target: "_blank"
         
       - name: "LinkedIn"
-        logo: "https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png"
+        logo: "assets/tools/linkedin.svg"
         subtitle: "Professional Network"
         tag: "social"
-        keywords: "professional network"
+        tagstyle: "is-primary"
+        keywords: "professional network career"
         url: "https://linkedin.com"
         target: "_blank"
 
-  - name: "Dev"
+  - name: "dev"
     icon: "fas fa-code"
     items:
       - name: "GitHub"
-        logo: "https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
-        subtitle: "Code Repository"
+        logo: "assets/tools/github.svg"
+        subtitle: "Code & Repositories"
         tag: "dev"
-        keywords: "git code repository"
+        tagstyle: "is-dark"
+        keywords: "git code repository version control"
         url: "https://github.com/"
         target: "_blank"
         
       - name: "Hugging Face"
-        logo: "https://huggingface.co/front/assets/huggingface_logo-noborder.svg"
-        subtitle: "AI Models"
-        tag: "dev"
-        keywords: "ai models ml"
+        logo: "assets/tools/huggingface.svg"
+        subtitle: "ML Models & Datasets"
+        tag: "ai"
+        tagstyle: "is-warning"
+        keywords: "ai models ml machine learning"
         url: "https://huggingface.co/"
         target: "_blank"
         
       - name: "DevDocs"
-        logo: "https://devdocs.io/images/apple-icon-152.png"
+        logo: "assets/tools/devdocs.svg"
         subtitle: "API Documentation"
-        tag: "dev"
-        keywords: "docs api documentation"
+        tag: "docs"
+        tagstyle: "is-success"
+        keywords: "docs api documentation reference"
         url: "https://devdocs.io/"
         target: "_blank"
 
@@ -113,79 +123,88 @@ services:
     icon: "fas fa-brain"
     items:
       - name: "ChatGPT"
-        logo: "https://upload.wikimedia.org/wikipedia/commons/0/04/ChatGPT_logo.svg"
-        subtitle: "OpenAI Assistant"
+        logo: "assets/tools/chatgpt.svg"
+        subtitle: "OpenAI GPT-4"
         tag: "ai"
-        keywords: "ai chatbot openai"
+        tagstyle: "is-success"
+        keywords: "ai chatbot openai gpt assistant"
         url: "https://chatgpt.com/"
         target: "_blank"
         
       - name: "Claude"
-        logo: "https://claude.ai/images/claude_app_icon.png"
-        subtitle: "Anthropic Assistant"
+        logo: "assets/tools/claude.svg"
+        subtitle: "Anthropic AI"
         tag: "ai"
-        keywords: "ai chatbot anthropic"
+        tagstyle: "is-warning"
+        keywords: "ai chatbot anthropic assistant"
         url: "https://claude.ai/"
         target: "_blank"
         
       - name: "Perplexity"
-        logo: "https://uxwing.com/wp-content/themes/uxwing/download/brands-and-social-media/perplexity-ai-icon.png"
-        subtitle: "AI Search"
-        tag: "ai"
-        keywords: "ai search"
+        logo: "assets/tools/perplexity.svg"
+        subtitle: "AI-Powered Search"
+        tag: "search"
+        tagstyle: "is-info"
+        keywords: "ai search research"
         url: "https://perplexity.com/"
         target: "_blank"
 
-  - name: "Play"
+  - name: "play"
     icon: "fas fa-play-circle"
     items:
       - name: "YouTube"
-        logo: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/512px-YouTube_full-color_icon_%282017%29.svg.png"
-        subtitle: "Video Platform"
+        logo: "assets/tools/youtube.svg"
+        subtitle: "Videos & Creators"
         tag: "media"
-        keywords: "video streaming"
+        tagstyle: "is-danger"
+        keywords: "video streaming content"
         url: "https://youtube.com/"
         target: "_blank"
         
       - name: "Prime Video"
-        logo: "https://images-na.ssl-images-amazon.com/images/G/01/digital/video/web/Logo-min.png"
-        subtitle: "Amazon Streaming"
-        tag: "media"
-        keywords: "streaming movies shows"
+        logo: "assets/tools/primevideo.svg"
+        subtitle: "Amazon Originals"
+        tag: "streaming"
+        tagstyle: "is-info"
+        keywords: "streaming movies shows amazon"
         url: "https://primevideo.com/"
         target: "_blank"
         
       - name: "Netflix"
-        logo: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/512px-Netflix_2015_logo.svg.png"
-        subtitle: "Streaming Service"
-        tag: "media"
-        keywords: "streaming movies shows"
+        logo: "assets/tools/netflix.svg"
+        subtitle: "Movies & Series"
+        tag: "streaming"
+        tagstyle: "is-danger"
+        keywords: "streaming movies shows series"
         url: "https://netflix.com/"
         target: "_blank"
 
   - name: "Social"
-    icon: "fas fa-users"
+    icon: "fas fa-share-alt"
     items:
       - name: "Twitter"
-        logo: "https://abs.twimg.com/responsive-web/client-web/icon-ios.77d25eba.png"
-        subtitle: "Social Network"
+        logo: "assets/tools/twitter.svg"
+        subtitle: "What's Happening"
         tag: "social"
-        keywords: "social network tweets"
+        tagstyle: "is-info"
+        keywords: "social network tweets x"
         url: "https://twitter.com/"
         target: "_blank"
         
       - name: "Reddit"
-        logo: "https://www.redditstatic.com/desktop2x/img/favicon/android-icon-192x192.png"
-        subtitle: "Community Platform"
-        tag: "social"
-        keywords: "forum community"
+        logo: "assets/tools/reddit.svg"
+        subtitle: "Front Page of Internet"
+        tag: "forum"
+        tagstyle: "is-warning"
+        keywords: "forum community discussion"
         url: "https://reddit.com/"
         target: "_blank"
         
       - name: "Instagram"
-        logo: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/512px-Instagram_logo_2016.svg.png"
-        subtitle: "Photo Sharing"
+        logo: "assets/tools/instagram.svg"
+        subtitle: "Photos & Stories"
         tag: "social"
-        keywords: "photos social"
+        tagstyle: "is-danger"
+        keywords: "photos social stories"
         url: "https://instagram.com/"
         target: "_blank"
